--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.0.3",
-        "vue": "^3.2.36",
-        "vue-loader": "^17.0.0"
+        "vue": "^3.2.37",
+        "vue-axios": "^3.4.1",
+        "vue-loader": "^17.0.0",
+        "vue-router": "^4.1.3"
     }
 }
